# MyFirstProject

./: .gitignore  LICENSE  Makefile  README.md  awesome_template.py  environment.yml  main.py  pyproject.toml  test_template.py
python_framework_template/: __init__.py
python_framework_template/cython_test/: add.c  add.pyx  cython_build.py  testcython.py
python_framework_template/frame_template/: awesome_template.py
python_framework_template/math_toolkits/: __init__.py  add.py
test/: test_template.py
