[tool.poetry]
name = "myfirstproject"
version = "0.1.0"
description = "test"
authors = ["BB"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "math_toolkits", from = "python_framework_template"}
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.black]
line-length = 80


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
